ui: fix issues on mobile (race conditions)
- Remove the id attr from sections, as it worked as anchor (view jumped
to them on click)
- Sort out moving selected window to the top on mobiles

--- a/static/portfolio.css
+++ b/static/portfolio.css
@@ -21,11 +21,18 @@ main {
 }
 
 header {
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    cursor: move;
+}
+
+header > .title {
+    flex: 1;
+    text-align: center;
+    cursor: move;
 }
 
 header > .close {
-    float: right;
     padding: 0 var(--global-space);
     cursor:
         url("./img/cross.png") 8 8,
